fixattu z-index bugi logoslider plugarista

--- a/style.scss
+++ b/style.scss
@@ -34,5 +34,4 @@ Version: 0.1
 // going over menu when scrolled. For sure doesn't belong here. Yikes.
 .owl-carousel {
   z-index: unset;
-  background: red;
 }
